Add functionality to the UI

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
     <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
         <div class="player-and-opponent-container">
             <div class="player">
                 <div class="player-label">You</div>
-                <div id="player-selection-icon" class="icon"><img></div>
+                <div id="player-selection"><img></div>
                 <div id="player-score">0 points</div>
             </div>
 
@@ -22,7 +22,7 @@
 
             <div class="opponent">
                 <div class="opponent-label">Opponent</div>
-                <div id="opponent-selection-icon" class="icon"><img></div>
+                <div id="opponent-selection"><img></div>
                 <div id="opponent-score">0 points</div>
             </div>
         </div>
